# Frill-Backend

./: .env.example  .gitignore  FRILL_BACKEND_FULL_BUILD.md  README.md  c.txt  files for github  openapi.json  pyproject.toml  scratch_test_api.py  test.bat
alembic/: env.py
alembic/versions/: 645da3c25fbb_add_status_to_saved_designs.py  a402bbf0d0a1_initial_schema.py
app/: config.py  database.py  dependencies.py  main.py  security.py
app/core/: cache.py  error_handlers.py  exceptions.py  rate_limit.py
app/models/: __init__.py  base.py  design.py  order.py  product.py  profile.py
app/routers/: auth.py  designs.py  orders.py  products.py  uploads.py  ws.py
app/schemas/: auth.py  design.py  order.py  product.py
app/services/: auth_service.py  design_service  design_service.py  order_service.py  payment_service.py  product_service.py  storage_service.py
backend-prep/: 00_ARCHITECTURE_OVERVIEW.md  01_DATA_MODELS.md  02_MODULE_INVENTORY.md  03_USER_FLOWS.md  04_ENDPOINT_REQUIREMENTS.md  05_AUTH_AND_ROLES.md  06_STORAGE_AND_MEDIA.md  07_GAPS_AND_INCONSISTENCIES.md  08_OPEN_QUESTIONS.md  FRILL_BACKEND_FULL_BUILD.md  README.md
scripts/: seed_admin.py  seed_products.py
tests/: conftest.py  test_auth.py  test_designs.py  test_openapi.py  test_orders.py  test_products.py  test_uploads.py
