[project]
name = "frill-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.5.0",
    "pydantic[email]>=2.0.0",
    "supabase>=2.31.0",
    "pyjwt>=2.9.0",
    "slowapi>=0.1.9",
    "redis>=5.0.0",
    "python-multipart>=0.0.9",
    "stripe>=7.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
